# mongo_and_celery_project

./: README.md  docker-compose.yml
CRUD_service/: Dockerfile  main.py  mongo_services.py  pyproject.toml
CRUD_service/tests/: test_api.py
celery_service/: Dockerfile  celery_worker.py  dependencies.py  main.py  pyproject.toml
celery_service/scripts/: docker-entrypoint.sh
celery_service/tests/: test_celery.py
